--- a/application/config/urlmapping.ini
+++ b/application/config/urlmapping.ini
@@ -20,14 +20,10 @@
 	action     = xml
 	
 
-[admin]
+[admin/@action]
 	controller = admin/index
-
-	
-[manual/@action]
-	controller = manual
 	action     = index
-	
+
 	
 [=>index]
 [@controller/@action/@uri_1/@uri_2/@uri_3]
